# World-IMaker

./: CMakeLists.txt  README.md
include/: Cubes.hpp  Curseur.hpp  GameControls.hpp  Interface.hpp  Map.hpp  RadialBasisFunctions.hpp  ShaderProgram.hpp  Texture.hpp  TrackballCamera.hpp  cube.hpp
lib/glimac/include/glimac/: SDLWindowManager.hpp  TrackballCamera.hpp  common.hpp
lib/glimac/src/: SDLWindowManager.cpp
shaders/: 3D.vs.glsl  ColorCube.fs.glsl  ColorCursor.fs.glsl  Cube.fs.glsl  Cursor.fs.glsl  text3D.fs.glsl
src/: Cubes.cpp  Curseur.cpp  Interface.cpp  Map.cpp  RadialBasisFunctions.cpp  ShaderProgram.cpp  Texture.cpp  cube.cpp  main.cpp
