# //////////////////////////////////////////////////////////////////////////////////////
# /////////////////////////////////////  STANDARDS  ////////////////////////////////////
# //////////////////////////////////////////////////////////////////////////////////////

cmake_minimum_required(VERSION 2.8)
add_definitions(-std=c++11)

# //////////////////////////////////////////////////////////////////////////////////////
# ///////////////////////////////  CONFIGURATION PROJECT  //////////////////////////////
# //////////////////////////////////////////////////////////////////////////////////////

project(WorldIMaker)

set(EXECUTABLE_NAME worldIMaker)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

# //////////////////////////////////////////////////////////////////////////////////////
# ////////////////////////////////////  DEPENDENCIES  //////////////////////////////////
# //////////////////////////////////////////////////////////////////////////////////////

find_package(SDL REQUIRED)
find_package(OpenGL REQUIRED)
find_package(GLEW REQUIRED)

# //////////////////////////////////////////////////////////////////////////////////////
# //////////////////////////////////////  INCLUDES  ////////////////////////////////////
# //////////////////////////////////////////////////////////////////////////////////////

## ------------------------------ For UPEM compilation ------------------------------ ##

if(UPEMLV)
    set(OPENGL_LIBRARIES /usr/lib/x86_64-linux-gnu/libGL.so.1)
endif(UPEMLV)

## ---------------------------------------------------------------------------------- ##

include_directories(
		${SDL_INCLUDE_DIR}
		${OPENGL_INCLUDE_DIR}
		${GLEW_INCLUDE_DIR} 
		lib/glimac/include
		lib/third-party/include
		)
set(ALL_LIBRARIES glimac ${SDL_LIBRARY} ${OPENGL_LIBRARIES} ${GLEW_LIBRARY})
add_subdirectory(lib/glimac)

# //////////////////////////////////////////////////////////////////////////////////////
# ////////////////////////////////////  PROJECT FILES  /////////////////////////////////
# //////////////////////////////////////////////////////////////////////////////////////

file(GLOB_RECURSE SOURCES_FILES src/*.cpp)
file(GLOB_RECURSE HEADERS_FILES include/*.hpp)
file(GLOB_RECURSE SHADERS_FILES shaders/*.glsl)

# //////////////////////////////////////////////////////////////////////////////////////
# //////////////////////////////////////  EXECUTABLE  //////////////////////////////////
# //////////////////////////////////////////////////////////////////////////////////////

add_executable(${PROJECT_NAME} ${SOURCES_FILES} ${HEADERS_FILES} ${SHADERS_FILES})
target_link_libraries(${PROJECT_NAME} ${ALL_LIBRARIES})